--- a/values.yaml
+++ b/values.yaml
@@ -1276,7 +1276,8 @@ nginx:
     #   setHeaders:
     #     X-Scope-OrgID: $remote_user
     basicAuthSecretName: ""
-
+    # -- (optional) Including the valid parameter to the `resolver` directive to re-resolve names every `dnsTTL` seconds/minutes
+    dnsTTL: "15s"
   image:
     repository: nginx
     tag: 1.22
