--- a/templates/monolith/monolith-dep.yaml
+++ b/templates/monolith/monolith-dep.yaml
@@ -1,4 +1,5 @@
-{{- if and (not .Values.monolith.statefulSet.enabled) .Values.monolith.enabled -}}
+{{- if eq .Values.mode "monolithic" -}}
+{{- if not .Values.monolith.statefulSet.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -128,4 +129,5 @@ spec:
         {{- if .Values.monolith.extraVolumes }}
         {{- toYaml .Values.monolith.extraVolumes | nindent 8}}
         {{- end }}
+{{- end -}}
 {{- end -}}
