--- a/templates/monolith/monolith-svc-headless.yaml
+++ b/templates/monolith/monolith-svc-headless.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.monolith.enabled -}}
+{{- if eq .Values.mode "monolithic" -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -21,4 +21,4 @@ spec:
       targetPort: grpc
   selector:
     {{- include "cortex.monolithSelectorLabels" . | nindent 4 }}
-{{- end }}
+{{- end -}}
