--- a/templates/alertmanager/alertmanager-poddisruptionbudget.yaml
+++ b/templates/alertmanager/alertmanager-poddisruptionbudget.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" -}}
 {{- if and (gt (int .Values.alertmanager.replicas) 1) (.Values.alertmanager.podDisruptionBudget) }}
 apiVersion: {{ include "cortex.pdbVersion" . }}
 kind: PodDisruptionBudget
@@ -12,3 +13,4 @@ spec:
       {{- include "cortex.alertmanagerSelectorLabels" . | nindent 6 }}
   {{- toYaml .Values.alertmanager.podDisruptionBudget | nindent 2 }}
 {{- end }}
+{{- end -}}
