--- a/templates/alertmanager/alertmanager-statefulset.yaml
+++ b/templates/alertmanager/alertmanager-statefulset.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" -}}
 {{- if .Values.alertmanager.enabled -}}
 {{- if .Values.alertmanager.statefulSet.enabled -}}
 apiVersion: apps/v1
@@ -189,5 +190,6 @@ spec:
           env:
             {{- toYaml .Values.alertmanager.env | nindent 12 }}
           {{- end }}
+{{- end -}}
 {{- end -}}
 {{- end -}}
