--- a/templates/alertmanager/alertmanager-svc.yaml
+++ b/templates/alertmanager/alertmanager-svc.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" -}}
 {{- if .Values.alertmanager.enabled -}}
 apiVersion: v1
 kind: Service
@@ -20,4 +21,5 @@ spec:
       targetPort: http-metrics
   selector:
     {{- include "cortex.alertmanagerSelectorLabels" . | nindent 4 }}
+{{- end -}}
 {{- end -}}
