--- a/templates/distributor/distributor-dep.yaml
+++ b/templates/distributor/distributor-dep.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" -}}
 {{- if .Values.distributor.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
@@ -121,4 +122,5 @@ spec:
         {{- if .Values.distributor.extraVolumes }}
         {{- toYaml .Values.distributor.extraVolumes | nindent 8}}
         {{- end }}
-{{- end }}
+{{- end -}}
+{{- end -}}
