--- a/templates/distributor/distributor-hpa.yaml
+++ b/templates/distributor/distributor-hpa.yaml
@@ -1,4 +1,5 @@
-{{- if and .Values.distributor.enabled .Values.distributor.autoscaling.enabled }}
+{{- if eq .Values.mode "distributed" -}}
+{{- if and .Values.distributor.enabled .Values.distributor.autoscaling.enabled -}}
 {{- with .Values.distributor.autoscaling -}}
 apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
@@ -35,5 +36,6 @@ spec:
   behavior:
     {{- toYaml . | nindent 4 }}
   {{- end }}
-{{- end }}
-{{- end }}
+{{- end -}}
+{{- end -}}
+{{- end -}}
