--- a/templates/distributor/distributor-svc-headless.yaml
+++ b/templates/distributor/distributor-svc-headless.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" -}}
 {{- if .Values.distributor.enabled -}}
 apiVersion: v1
 kind: Service
@@ -22,4 +23,5 @@ spec:
       targetPort: grpc
   selector:
     {{- include "cortex.distributorSelectorLabels" . | nindent 4 }}
-{{- end }}
+{{- end -}}
+{{- end -}}
