--- a/templates/ingester/ingester-hpa.yaml
+++ b/templates/ingester/ingester-hpa.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" -}}
 {{- if and .Values.ingester.enabled .Values.ingester.autoscaling.enabled -}}
 {{- with .Values.ingester.autoscaling -}}
 apiVersion: autoscaling/v2beta2
@@ -25,5 +26,6 @@ spec:
   behavior:
     {{- toYaml . | nindent 4 }}
   {{- end }}
-{{- end }}
-{{- end }}
+{{- end -}}
+{{- end -}}
+{{- end -}}
