--- a/templates/ingester/ingester-svc-headless.yaml
+++ b/templates/ingester/ingester-svc-headless.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" -}}
 {{- if .Values.ingester.enabled -}}
 apiVersion: v1
 kind: Service
@@ -21,4 +22,5 @@ spec:
       targetPort: grpc
   selector:
     {{- include "cortex.ingesterSelectorLabels" . | nindent 4 }}
-{{- end }}
+{{- end -}}
+{{- end -}}
