--- a/templates/ingester/ingester-svc.yaml
+++ b/templates/ingester/ingester-svc.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" -}}
 {{- if .Values.ingester.enabled -}}
 apiVersion: v1
 kind: Service
@@ -20,4 +21,5 @@ spec:
       targetPort: http-metrics
   selector:
     {{- include "cortex.ingesterSelectorLabels" . | nindent 4 }}
-{{- end }}
+{{- end -}}
+{{- end -}}
