--- a/templates/nginx/nginx-dep.yaml
+++ b/templates/nginx/nginx-dep.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" }}
 {{- if .Values.nginx.enabled }}
 apiVersion: apps/v1
 kind: Deployment
@@ -112,4 +113,5 @@ spec:
         {{- if .Values.nginx.extraVolumes }}
         {{- toYaml .Values.nginx.extraVolumes | nindent 8}}
         {{- end }}
+{{- end }}
 {{- end }}
