--- a/templates/nginx/nginx-hpa.yaml
+++ b/templates/nginx/nginx-hpa.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" }}
 {{- if and .Values.nginx.enabled .Values.nginx.autoscaling.enabled }}
 {{- with .Values.nginx.autoscaling -}}
 apiVersion: autoscaling/v2beta2
@@ -35,5 +36,6 @@ spec:
   behavior:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+{{- end }}
 {{- end }}
 {{- end }}
