--- a/templates/nginx/nginx-ingress.yaml
+++ b/templates/nginx/nginx-ingress.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" }}
 {{- if and .Values.ingress.enabled .Values.nginx.enabled -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -37,4 +38,5 @@ spec:
                   number: {{ $.Values.nginx.http_listen_port }}
         {{- end }}
   {{- end }}
+{{- end }}
 {{- end }}
