--- a/templates/nginx/nginx-svc.yaml
+++ b/templates/nginx/nginx-svc.yaml
@@ -1,4 +1,5 @@
-{{- if .Values.nginx.enabled }}
+{{- if eq .Values.mode "distributed" -}}
+{{- if .Values.nginx.enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -20,4 +21,5 @@ spec:
       targetPort: http-metrics
   selector:
     {{- include "cortex.nginxSelectorLabels" . | nindent 4 }}
-{{- end }}
+{{- end -}}
+{{- end -}}
