--- a/templates/querier/querier-dep.yaml
+++ b/templates/querier/querier-dep.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" -}}
 {{- if .Values.querier.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
@@ -120,4 +121,5 @@ spec:
         {{- if .Values.querier.extraVolumes }}
         {{- toYaml .Values.querier.extraVolumes | nindent 8}}
         {{- end }}
+{{- end -}}
 {{- end -}}
