--- a/templates/querier/querier-hpa.yaml
+++ b/templates/querier/querier-hpa.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" -}}
 {{- if and .Values.querier.enabled .Values.querier.autoscaling.enabled -}}
 {{- with .Values.querier.autoscaling -}}
 apiVersion: autoscaling/v2beta2
@@ -37,3 +38,4 @@ spec:
   {{- end }}
 {{- end }}
 {{- end }}
+{{- end -}}
