--- a/templates/query-frontend/query-frontend-dep.yaml
+++ b/templates/query-frontend/query-frontend-dep.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" -}}
 {{- if .Values.query_frontend.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
@@ -113,4 +114,5 @@ spec:
         {{- if .Values.query_frontend.extraVolumes }}
         {{- toYaml .Values.query_frontend.extraVolumes | nindent 8}}
         {{- end }}
+{{- end -}}
 {{- end -}}
