--- a/templates/query-frontend/query-frontend-svc-headless.yaml
+++ b/templates/query-frontend/query-frontend-svc-headless.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" -}}
 {{- if .Values.query_frontend.enabled -}}
 apiVersion: v1
 kind: Service
@@ -22,4 +23,5 @@ spec:
       targetPort: grpc
   selector:
     {{- include "cortex.queryFrontendSelectorLabels" . | nindent 4 }}
+{{- end -}}
 {{- end -}}
