--- a/templates/query-frontend/query-frontend-svc.yaml
+++ b/templates/query-frontend/query-frontend-svc.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" -}}
 {{- if .Values.query_frontend.enabled -}}
 apiVersion: v1
 kind: Service
@@ -20,4 +21,5 @@ spec:
       targetPort: http-metrics
   selector:
     {{- include "cortex.queryFrontendSelectorLabels" . | nindent 4 }}
+{{- end -}}
 {{- end -}}
