--- a/templates/query-scheduler/query-scheduler-dep.yaml
+++ b/templates/query-scheduler/query-scheduler-dep.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" -}}
 {{- if .Values.query_scheduler.enabled }}
 apiVersion: apps/v1
 kind: Deployment
@@ -114,3 +115,4 @@ spec:
         {{- toYaml .Values.query_scheduler.extraVolumes | nindent 8 }}
         {{- end }}
 {{- end }}
+{{- end -}}
