--- a/templates/query-scheduler/query-scheduler-svc.yaml
+++ b/templates/query-scheduler/query-scheduler-svc.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" -}}
 {{- if .Values.query_scheduler.enabled }}
 apiVersion: v1
 kind: Service
@@ -21,3 +22,4 @@ spec:
   selector:
     {{- include "cortex.querySchedulerSelectorLabels" . | nindent 4 }}
 {{- end }}
+{{- end -}}
