--- a/templates/ruler/ruler-configmap.yaml
+++ b/templates/ruler/ruler-configmap.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" -}}
 {{- if .Values.ruler.enabled }}
 {{- range $dir, $files := .Values.ruler.directories }}
 ---
@@ -12,3 +13,4 @@ data:
   {{- toYaml $files | nindent 2}}
 {{- end }}
 {{- end }}
+{{- end -}}
