--- a/templates/ruler/ruler-dep.yaml
+++ b/templates/ruler/ruler-dep.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" -}}
 {{- if .Values.ruler.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
@@ -194,3 +195,4 @@ spec:
         {{- toYaml .Values.ruler.extraVolumes | nindent 8}}
         {{- end }}
 {{- end }}
+{{- end -}}
