--- a/templates/ruler/ruler-poddisruptionbudget.yaml
+++ b/templates/ruler/ruler-poddisruptionbudget.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" -}}
 {{- if and (gt (int .Values.ruler.replicas) 1) (.Values.ruler.podDisruptionBudget) }}
 apiVersion: {{ include "cortex.pdbVersion" . }}
 kind: PodDisruptionBudget
@@ -12,3 +13,4 @@ spec:
       {{- include "cortex.rulerSelectorLabels" . | nindent 6 }}
   {{- toYaml .Values.ruler.podDisruptionBudget | nindent 2 }}
 {{- end }}
+{{- end -}}
