--- a/templates/ruler/ruler-svc.yaml
+++ b/templates/ruler/ruler-svc.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" -}}
 {{- if .Values.ruler.enabled -}}
 apiVersion: v1
 kind: Service
@@ -21,3 +22,4 @@ spec:
   selector:
     {{- include "cortex.rulerSelectorLabels" . | nindent 4 }}
 {{- end }}
+{{- end -}}
