--- a/templates/store-gateway/store-gateway-svc-headless.yaml
+++ b/templates/store-gateway/store-gateway-svc-headless.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" -}}
 {{- if and (eq .Values.config.storage.engine "blocks") .Values.store_gateway.enabled -}}
 apiVersion: v1
 kind: Service
@@ -21,4 +22,5 @@ spec:
       targetPort: grpc
   selector:
     {{- include "cortex.storeGatewaySelectorLabels" . | nindent 4 }}
+{{- end -}}
 {{- end -}}
