--- a/templates/store-gateway/store-gateway-svc.yaml
+++ b/templates/store-gateway/store-gateway-svc.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.mode "distributed" -}}
 {{- if and (eq .Values.config.storage.engine "blocks") (.Values.store_gateway.enabled) -}}
 apiVersion: v1
 kind: Service
@@ -20,4 +21,5 @@ spec:
       targetPort: http-metrics
   selector:
     {{- include "cortex.storeGatewaySelectorLabels" . | nindent 4 }}
+{{- end -}}
 {{- end -}}
