storage and rules-storage

--- a/templates/ruler/ruler-statefulset.yaml
+++ b/templates/ruler/ruler-statefulset.yaml
@@ -21,7 +21,7 @@ spec:
   {{- if .Values.ruler.persistentVolume.enabled }}
   volumeClaimTemplates:
     - metadata:
-        name: storage
+        name: rules-storage
         {{- if .Values.ruler.persistentVolume.annotations }}
         annotations:
           {{ toYaml .Values.ruler.persistentVolume.annotations | nindent 10 }}
@@ -153,6 +153,8 @@ spec:
               mountPath: /etc/cortex
             - name: runtime-config
               mountPath: /etc/cortex-runtime-config
+            - name: storage
+              mountPath: /data
             - name: rules-storage
               mountPath: /rulesData/rules
               {{- with .Values.ruler.persistentVolume.subPath }}
@@ -206,7 +208,7 @@ spec:
           configMap:
             name: {{ template "cortex.fullname" . }}-runtime-config
         {{- if not .Values.ingester.persistentVolume.enabled }}
-        - name: rules-storage
+        - name: storage
           emptyDir: {}
         {{- end }}
         - name: tmp
@@ -216,7 +218,7 @@ spec:
           configMap:
             name: {{ include "cortex.rulerFullname" $ }}-{{ include "cortex.rulerRulesDirName" $dir }}
         {{- end }}
-        - name: rules-storage
+        - name: storage
           emptyDir: {}
         {{- if .Values.ruler.sidecar.enabled }}
         - name: sc-rules-volume
