Add pod topology spread constrant option to Ingester/Alertmanager statefulset
Signed-off-by: Dan Peric <108087612+dpericaxon@users.noreply.github.com>

--- a/templates/ingester/ingester-statefulset.yaml
+++ b/templates/ingester/ingester-statefulset.yaml
@@ -73,6 +73,10 @@ spec:
       {{- end }}
       nodeSelector:
         {{- toYaml .Values.ingester.nodeSelector | nindent 8 }}
+      {{- if .Values.ingester.topologySpreadConstraints }}
+      topologySpreadConstraints:
+      {{- toYaml .Values.ingester.topologySpreadConstraints | nindent 8}}
+      {{- end }}
       affinity:
         {{- toYaml .Values.ingester.affinity | nindent 8 }}
       tolerations:
