--- a/values.yaml
+++ b/values.yaml
@@ -1278,6 +1278,8 @@ nginx:
     basicAuthSecretName: ""
     # -- Including the valid parameter to the `resolver` directive to re-resolve names every `dnsTTL` seconds/minutes
     dnsTTL: "15s"
+    # -- Enables all access logs from nginx, otherwise ignores 2XX and 3XX status codes
+    verboseLogging: true
   image:
     repository: nginx
     tag: 1.23
