--- a/templates/nginx/nginx-config.yaml
+++ b/templates/nginx/nginx-config.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.nginx.enabled }}
-{{- $rootDomain := printf "%s.svc.%s:%d" .Release.Namespace .Values.clusterDomain (.Values.config.server.http_listen_port | int) }}
+{{- $rootDomain := printf "%s.svc.%s" .Release.Namespace .Values.clusterDomain }}
 kind: ConfigMap
 apiVersion: v1
 metadata:
@@ -81,20 +81,24 @@ data:
 
         # Distributor Config
         location = /ring {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ $rootDomain }}$request_uri;
+          set $backend_servers {{ template "cortex.fullname" . }}-distributor.{{ $rootDomain }};
+          proxy_pass      http://$backend_servers:{{ .Values.config.server.http_listen_port }}$request_uri;
         }
 
         location = /all_user_stats {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ $rootDomain }}$request_uri;
+          set $backend_servers {{ template "cortex.fullname" . }}-distributor.{{ $rootDomain }};
+          proxy_pass      http://$backend_servers:{{ .Values.config.server.http_listen_port }}$request_uri;
         }
 
         location = /api/prom/push {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ $rootDomain }}$request_uri;
+          set $backend_servers {{ template "cortex.fullname" . }}-distributor.{{ $rootDomain }};
+          proxy_pass      http://$backend_servers:{{ .Values.config.server.http_listen_port }}$request_uri;
         }
 
         ## New Remote write API. Ref: https://cortexmetrics.io/docs/api/#remote-write
         location = /api/v1/push {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-distributor.{{ $rootDomain }}$request_uri;
+          set $backend_servers {{ template "cortex.fullname" . }}-distributor.{{ $rootDomain }};
+          proxy_pass      http://$backend_servers:{{ .Values.config.server.http_listen_port }}$request_uri;
         }
 
         {{- end }}
@@ -103,19 +107,23 @@ data:
 
         # Alertmanager Config
         location ~ /api/prom/alertmanager/.* {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-alertmanager.{{ $rootDomain }}$request_uri;
+          set $backend_servers {{ template "cortex.fullname" . }}-alertmanager.{{ $rootDomain }};
+          proxy_pass      http://$backend_servers:{{ .Values.config.server.http_listen_port }}$request_uri;
         }
 
         location ~ /api/v1/alerts {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-alertmanager.{{ $rootDomain }}$request_uri;
+          set $backend_servers {{ template "cortex.fullname" . }}-alertmanager.{{ $rootDomain }};
+          proxy_pass      http://$backend_servers:{{ .Values.config.server.http_listen_port }}$request_uri;
         }
 
         location ~ /multitenant_alertmanager/status {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-alertmanager.{{ $rootDomain }}$request_uri;
+          set $backend_servers {{ template "cortex.fullname" . }}-alertmanager.{{ $rootDomain }};
+          proxy_pass      http://$backend_servers:{{ .Values.config.server.http_listen_port }}$request_uri;
         }
 
         location = /api/prom/api/v1/alerts {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-alertmanager.{{ $rootDomain }}/api/v1/alerts;
+          set $backend_servers {{ template "cortex.fullname" . }}-alertmanager.{{ $rootDomain }};
+          proxy_pass      http://$backend_servers:{{ .Values.config.server.http_listen_port }}/api/v1/alerts;
         }
 
         {{- end }}
@@ -124,15 +132,18 @@ data:
 
         # Ruler Config
         location ~ /api/v1/rules {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-ruler.{{ $rootDomain }}$request_uri;
+          set $backend_servers {{ template "cortex.fullname" . }}-ruler.{{ $rootDomain }};
+          proxy_pass      http://$backend_servers:{{ .Values.config.server.http_listen_port }}$request_uri;
         }
 
         location ~ /ruler/ring {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-ruler.{{ $rootDomain }}$request_uri;
+          set $backend_servers {{ template "cortex.fullname" . }}-ruler.{{ $rootDomain }};
+          proxy_pass      http://$backend_servers:{{ .Values.config.server.http_listen_port }}$request_uri;
         }
 
         location ~ /api/prom/rules {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-ruler.{{ $rootDomain }}$request_uri;
+          set $backend_servers {{ template "cortex.fullname" . }}-ruler.{{ $rootDomain }};
+          proxy_pass      http://$backend_servers:{{ .Values.config.server.http_listen_port }}$request_uri;
         }
 
         {{- end }}
@@ -141,7 +152,8 @@ data:
 
         # Config Config
         location ~ /api/prom/configs/.* {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-configs.{{ $rootDomain }}$request_uri;
+          set $backend_servers {{ template "cortex.fullname" . }}-configs.{{ $rootDomain }};
+          proxy_pass      http://$backend_servers:{{ .Values.config.server.http_listen_port }}$request_uri;
         }
 
         {{- end }}
@@ -150,16 +162,19 @@ data:
 
         # Query Config
         location ~ /api/prom/.* {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-query-frontend.{{ $rootDomain }}$request_uri;
+          set $backend_servers {{ template "cortex.fullname" . }}-query-frontend.{{ $rootDomain }};
+          proxy_pass      http://$backend_servers:{{ .Values.config.server.http_listen_port }}$request_uri;
         }
 
         ## New Query frontend APIs as per https://cortexmetrics.io/docs/api/#querier--query-frontend
         location ~ ^{{.Values.config.api.prometheus_http_prefix}}/api/v1/(read|metadata|labels|series|query_range|query) {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-query-frontend.{{ $rootDomain }}$request_uri;
+          set $backend_servers {{ template "cortex.fullname" . }}-query-frontend.{{ $rootDomain }};
+          proxy_pass      http://$backend_servers:{{ .Values.config.server.http_listen_port }}$request_uri;
         }
 
         location ~ {{.Values.config.api.prometheus_http_prefix}}/api/v1/label/.* {
-          proxy_pass      http://{{ template "cortex.fullname" . }}-query-frontend.{{ $rootDomain }}$request_uri;
+          set $backend_servers {{ template "cortex.fullname" . }}-query-frontend.{{ $rootDomain }};
+          proxy_pass      http://$backend_servers:{{ .Values.config.server.http_listen_port }}$request_uri;
         }
 
         {{- end }}
@@ -169,7 +184,8 @@ data:
         {{- range $org := compact .Values.nginx.config.auth_orgs | uniq }}
         location = /api/v1/push/{{ $org }} {
           proxy_set_header      X-Scope-OrgID {{ $org }};
-          proxy_pass      http://{{ template "cortex.fullname" $ }}-distributor.{{ $rootDomain }}/api/v1/push;
+          set $backend_servers {{ template "cortex.fullname" . }}-distributor.{{ $rootDomain }};
+          proxy_pass      http://$backend_servers:{{ .Values.config.server.http_listen_port }}/api/v1/push;
         }
         {{- end }}
         {{- end }}
