refactor caching for block storage
Signed-off-by: Niclas Schad <niclas.schad@gmail.com>

--- a/ci/test-deployment-values.yaml
+++ b/ci/test-deployment-values.yaml
@@ -164,6 +164,7 @@ memcached-frontend:
       cpu: 0
       memory: 0
 memcached-blocks:
+  enabled: true
   architecture: standalone
   replicaCount: 1
   resources:
@@ -171,6 +172,7 @@ memcached-blocks:
       cpu: 0
       memory: 0
 memcached-blocks-index:
+  enabled: true
   architecture: standalone
   replicaCount: 1
   resources:
@@ -178,6 +180,7 @@ memcached-blocks-index:
       cpu: 0
       memory: 0
 memcached-blocks-metadata:
+  enabled: true
   architecture: standalone
   replicaCount: 1
   resources:
