--- a/ci/test-configmap-values.yaml
+++ b/ci/test-configmap-values.yaml
@@ -157,6 +157,7 @@ memcached-frontend:
       cpu: 0
       memory: 0
 memcached-blocks:
+  enabled: true
   architecture: standalone
   replicaCount: 1
   resources:
@@ -164,6 +165,7 @@ memcached-blocks:
       cpu: 0
       memory: 0
 memcached-blocks-index:
+  enabled: true
   architecture: standalone
   replicaCount: 1
   resources:
@@ -171,6 +173,7 @@ memcached-blocks-index:
       cpu: 0
       memory: 0
 memcached-blocks-metadata:
+  enabled: true
   architecture: standalone
   replicaCount: 1
   resources:
