--- a/ci/test-sts-values.yaml
+++ b/ci/test-sts-values.yaml
@@ -155,6 +155,7 @@ memcached-frontend:
       cpu: 0
       memory: 0
 memcached-blocks:
+  enabled: true
   architecture: standalone
   replicaCount: 1
   resources:
@@ -162,6 +163,7 @@ memcached-blocks:
       cpu: 0
       memory: 0
 memcached-blocks-index:
+  enabled: true
   architecture: standalone
   replicaCount: 1
   resources:
@@ -169,6 +171,7 @@ memcached-blocks-index:
       cpu: 0
       memory: 0
 memcached-blocks-metadata:
+  enabled: true
   architecture: standalone
   replicaCount: 1
   resources:
