--- a/values.yaml
+++ b/values.yaml
@@ -611,6 +611,16 @@ ruler:
   affinity: {}
   annotations: {}
 
+  autoscaling:
+    # -- Creates a HorizontalPodAutoscaler for the ruler.
+    enabled: false
+    minReplicas: 2
+    maxReplicas: 30
+    targetCPUUtilizationPercentage: 80
+    targetMemoryUtilizationPercentage: 80
+    # -- Ref: https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/#support-for-configurable-scaling-behavior
+    behavior: {}
+
   startupProbe:
     httpGet:
       path: /ready
