--- a/values.yaml
+++ b/values.yaml
@@ -611,6 +611,22 @@ ruler:
   affinity: {}
   annotations: {}
 
+  autoscaling:
+    # -- Creates a HorizontalPodAutoscaler for the ruler.
+    enabled: false
+    minReplicas: 2
+    maxReplicas: 30
+    targetCPUUtilizationPercentage: 80
+    targetMemoryUtilizationPercentage: 80
+    # -- Ref: https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/#support-for-configurable-scaling-behavior
+    behavior: {}
+
+  validation:
+    # -- Checks that the ruler is compatible with horizontal scaling,
+    # as documented in https://cortexmetrics.io/docs/guides/ruler-sharding/.
+    # You may need to disable this if your config is compatible, but not understood by the validator.
+    enabled: true
+
   startupProbe:
     httpGet:
       path: /ready
