Add annotations and labels to memberlist service
Signed-off-by: Matthew Ames <mames@yelp.com>

--- a/values.yaml
+++ b/values.yaml
@@ -1623,3 +1623,8 @@ memcached-blocks-metadata:
     enabled: true
     serviceMonitor:
       enabled: false
+
+memberlist:
+  service:
+    annotations: {}
+    labels: {}
