--- a/templates/svc-memberlist-headless.yaml
+++ b/templates/svc-memberlist-headless.yaml
@@ -5,6 +5,11 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "cortex.labels" . | nindent 4 }}
+    {{- with .Values.memberlist.service.labels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
+  annotations:
+    {{- toYaml .Values.memberlist.service.annotations | nindent 4 }}
 spec:
   type: ClusterIP
   clusterIP: None
