Add targeLabels to Prometheus ServiceMonitor CRDs
Signed-off-by: John Meza <john.m.meza@protonmail.com>

--- a/templates/alertmanager/alertmanager-servicemonitor.yaml
+++ b/templates/alertmanager/alertmanager-servicemonitor.yaml
@@ -20,6 +20,12 @@ spec:
   namespaceSelector:
     matchNames:
       - {{ .Release.Namespace | quote }}
+  {{- if .Values.alertmanager.serviceMonitor.targetLabels }}
+  targetLabels:
+  {{- range .Values.alertmanager.serviceMonitor.targetLabels }}
+    - {{ . }}
+  {{- end }}
+  {{- end }}
   endpoints:
   - port: http-metrics
     {{- if .Values.alertmanager.serviceMonitor.interval }}
