--- a/ci/test-deployment-values.yaml
+++ b/ci/test-deployment-values.yaml
@@ -140,6 +140,8 @@ alertmanager:
 ruler:
   replicas: 1
   enabled: true
+  statefulSet: 
+    enabled: false
   extraVolumes:
     - name: tmp-test
       emptyDir: {}
