--- a/ci/test-configmap-values.yaml
+++ b/ci/test-configmap-values.yaml
@@ -133,6 +133,8 @@ alertmanager:
 ruler:
   replicas: 1
   enabled: true
+  statefulSet: 
+    enabled: false
   extraVolumes:
     - name: tmp-test
       emptyDir: {}
