--- a/ci/test-sts-values.yaml
+++ b/ci/test-sts-values.yaml
@@ -131,6 +131,8 @@ alertmanager:
 ruler:
   replicas: 1
   enabled: true
+  statefulSet: 
+    enabled: true
   extraVolumes:
     - name: tmp-test
       emptyDir: {}
